updated fab elevation and scale type of all images

--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -24,9 +24,9 @@
 
                         <ImageView
                             android:id="@+id/photo"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:scaleType="fitCenter"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
                             android:layout_gravity="center_horizontal"/>
 
                         <View
